--- a/api_src/components/properties/socialInteract.yaml
+++ b/api_src/components/properties/socialInteract.yaml
@@ -1,9 +1,10 @@
   # language=Markdown
 description: >
-  List the social interact data found in the podcast feed.
+  List the social interact data found in the podcast feed. May not be reported.
 
 
   See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#social-interact) for more information.
 type: array
+nullable: true
 items:
   $ref: '../schemas/socialInteract_item.yaml'
