--- a/api_src/components/properties/chaptersUrl.yaml
+++ b/api_src/components/properties/chaptersUrl.yaml
@@ -2,5 +2,6 @@
 description: >
   Link to the JSON file containing the episode chapters
 type: string
+nullable: true
 format: URL
 example: "https://studio.hypercatcher.com/chapters/podcast/http:feed.nashownotes.comrss.xml/episode/http:1322.noagendanotes.com"
