--- a/api_src/components/properties/itunesId_feed.yaml
+++ b/api_src/components/properties/itunesId_feed.yaml
@@ -2,4 +2,5 @@
 description: >
   The iTunes ID of this feed if there is one, and we know what it is.
 type: integer
+nullable: true
 example: 1441923632
