--- a/api_src/components/properties/since.yaml
+++ b/api_src/components/properties/since.yaml
@@ -2,5 +2,6 @@
 description: >
   Value of `since` parameter passed to request.
 type: integer
+nullable: true
 format: Unix Epoch
 example: 1613805249
