--- a/api_src/components/properties/url_funding.yaml
+++ b/api_src/components/properties/url_funding.yaml
@@ -5,5 +5,6 @@ description: >
 
   See the [podcast namespace spec](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#funding) for more information.
 type: string
+nullable: true
 format: URL
 example: "https://patreon.com/johnchidgey"
