--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -4072,6 +4072,10 @@ paths:
         tag.
 
 
+        The only supported tag is `podcast:value` using the `podcast-value`
+        parameter.
+
+
         When called without a `start_at` value, the top 500 feeds sorted by
         popularity are returned in descending order.
 
