Add support for getting feed value data from guid
https://podcastindex.social/@dave/110851275127076366

--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -223,6 +223,8 @@ paths:
     $ref: 'paths/value/byfeedid.yaml'
   '/value/byfeedurl':
     $ref: 'paths/value/byfeedurl.yaml'
+  '/value/bypodcastguid':
+    $ref: 'paths/value/bypodcastguid.yaml'
   '/stats/current':
     $ref: 'paths/stats/current.yaml'
   '/categories/list':
