Add support for getting episode value data from feed and episode guid
https://podcastindex.social/@dave/110879169344223126

--- a/api_src/components/properties/suggested_v4v.yaml
+++ b/api_src/components/properties/suggested_v4v.yaml
@@ -2,4 +2,5 @@
 description: >
   Suggested amount per second of playback to send. Unit is specific to the `type`.
 type: string
+nullable: true
 example: "0.00000020000"
