--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -710,6 +710,30 @@ components:
       schema:
         type: integer
       example: 75075
+    podcastguid:
+      name: podcastguid
+      in: query
+      description: >
+        The GUID from the `podcast:guid` tag in the feed. This value is a
+        unique, global identifier for the podcast.
+
+
+        See the namespace spec for
+        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid)
+        for details.
+      required: true
+      schema:
+        type: string
+      example: 917393e3-1b1e-5cef-ace4-edaa54e1f810
+    episodeguid:
+      name: episodeguid
+      in: query
+      description: |
+        The guid specified by the `<guid>` in the episode `<item>`.
+      required: true
+      schema:
+        type: string
+      example: PC20143
     id_feed_podcast_pi_pubnotify:
       name: id
       in: query
@@ -1558,6 +1582,7 @@ components:
         Suggested amount per second of playback to send. Unit is specific to the
         `type`.
       type: string
+      nullable: true
       example: '0.00000020000'
     model_v4v:
       description: |
@@ -2976,6 +3001,45 @@ components:
       properties:
         id:
           $ref: '#/components/schemas/id_query_guid'
+    query_podcastguid:
+      description: |
+        The value of the `podcastguid` argument passed to the request.
+      type: string
+      example: 917393e3-1b1e-5cef-ace4-edaa54e1f810
+    query_episodeguid:
+      description: |
+        The value of the `episodeguid` argument passed to the request.
+      type: string
+      example: PC20143
+    query_byepisodeguid:
+      description: |
+        Object containing the input query data
+      type: object
+      properties:
+        podcastguid:
+          $ref: '#/components/schemas/query_podcastguid'
+        episodeguid:
+          $ref: '#/components/schemas/query_episodeguid'
+    value_byepisodeguid:
+      description: >
+        Information for supporting the podcast via one of the "Value for Value"
+        methods. May not be reported.
+
+
+        Examples:
+          - `lightning` value type: https://api.podcastindex.org/api/1.0/podcasts/byfeedid?id=169991&pretty
+          - `webmonetization` value type: https://api.podcastindex.org/api/1.0/podcasts/byfeedid?id=779873&pretty
+      type: object
+      nullable: true
+      properties:
+        model:
+          $ref: '#/components/schemas/model_v4v'
+        destinations:
+          $ref: '#/components/schemas/destinations_v4v'
+        title:
+          $ref: '#/components/schemas/title_episode'
+        feedTitle:
+          $ref: '#/components/schemas/title_feed'
     stats:
       description: |
         An array statistic properties
@@ -3514,6 +3578,21 @@ components:
                 $ref: '#/components/schemas/query_guid_id'
               value:
                 $ref: '#/components/schemas/value'
+              description:
+                $ref: '#/components/schemas/description_response'
+    value_byepisodeguid:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/status'
+              query:
+                $ref: '#/components/schemas/query_byepisodeguid'
+              value:
+                $ref: '#/components/schemas/value_byepisodeguid'
               description:
                 $ref: '#/components/schemas/description_response'
     stats_current:
@@ -4776,7 +4855,7 @@ paths:
     get:
       tags:
         - Value
-      summary: By GUID
+      summary: By Feed GUID
       description: >
         This call returns the information for supporting the podcast via one of
         the "Value for Value" methods from podcast GUID.
@@ -4796,6 +4875,49 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/value_bypodcastguid'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+  /value/byepisodeguid:
+    get:
+      tags:
+        - Value
+      summary: By Episode GUID
+      description: >
+        This call returns the information for supporting the podcast episode via
+        one of the "Value for Value" methods from podcast GUID and the episode
+        GUID.
+
+
+        The `podcastguid` is the GUID from the `podcast:guid` tag in the feed.
+        This value is a unique, global identifier for the podcast. See the
+        namespace spec for
+        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid)
+        for details.
+
+
+        The `episodeguid` is the unique guid specified for the `<item>` in the
+        feed but may not be globally unique.
+
+
+        Examples:
+
+          - https://api.podcastindex.org/api/1.0/value/byepisodeguid?podcastguid=917393e3-1b1e-5cef-ace4-edaa54e1f810&episodeguid=PC20143&pretty
+          - https://api.podcastindex.org/api/1.0/value/byepisodeguid?podcastguid=c73b1a23-1c28-5edb-94c3-10d1745d0877&episodeguid=bdea6759-a7b6-4c0d-9d1e-acca3133f4a9&pretty
+      operationId: value/byepisodeguid
+      security:
+        - API Key: []
+          User Agent: []
+          Date: []
+          Authorization: []
+      parameters:
+        - $ref: '#/components/parameters/podcastguid'
+        - $ref: '#/components/parameters/episodeguid'
+        - $ref: '#/components/parameters/pretty'
+      responses:
+        '200':
+          $ref: '#/components/responses/value_byepisodeguid'
         '400':
           $ref: '#/components/responses/400'
         '401':
