--- a/api_src/paths/value/byfeedurl.yaml
+++ b/api_src/paths/value/byfeedurl.yaml
@@ -13,13 +13,14 @@ get:
       - Episodes: https://tracking.podcastindex.org/episodeValueBlocks.json
 
 
+    Note: No API key needed for this endpoint.
+
+
     Examples:
 
       - https://api.podcastindex.org/api/1.0/value/byfeedurl?url=https://mp3s.nashownotes.com/pc20rss.xml&pretty
       - https://api.podcastindex.org/api/1.0/value/byfeedurl?url=https://lespoesiesdheloise.fr/@heloise/feed.xml&pretty
   operationId: value/byfeedurl
-  security:
-    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/url.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
