--- a/api_src/paths/value/byepisodeguid.yaml
+++ b/api_src/paths/value/byepisodeguid.yaml
@@ -16,13 +16,14 @@ get:
     The `episodeguid` is the unique guid specified for the `<item>` in the feed but may not be globally unique.
 
 
+    Note: No API key needed for this endpoint.
+
+
     Examples:
     
       - https://api.podcastindex.org/api/1.0/value/byepisodeguid?podcastguid=917393e3-1b1e-5cef-ace4-edaa54e1f810&episodeguid=PC20143&pretty
       - https://api.podcastindex.org/api/1.0/value/byepisodeguid?podcastguid=c73b1a23-1c28-5edb-94c3-10d1745d0877&episodeguid=bdea6759-a7b6-4c0d-9d1e-acca3133f4a9&pretty
   operationId: value/byepisodeguid
-  security:
-    - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/podcastguid.yaml'
     - $ref: '../../components/parameters/episodeguid.yaml'
