Add support for batch value endpoint
https://podcastindex.social/@dave/110895277939377191

--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -227,6 +227,8 @@ paths:
     $ref: 'paths/value/bypodcastguid.yaml'
   '/value/byepisodeguid':
     $ref: 'paths/value/byepisodeguid.yaml'
+  '/value/batch/byepisodeguid':
+    $ref: 'paths/value/batch/byepisodeguid.yaml'
   '/stats/current':
     $ref: 'paths/stats/current.yaml'
   '/categories/list':
