Fix file case issue

--- a/api_src/components/properties/value_byepisodeguid_batch.yaml
+++ b/api_src/components/properties/value_byepisodeguid_batch.yaml
@@ -4,7 +4,7 @@ description: |
 type: object
 properties:
   podcastGUID:
-    $ref: 'podcastGUID.yaml'
+    $ref: 'podcastguid.yaml'
   guid:
     $ref: 'guid.yaml'
   title:
