--- a/api_src/components/schemas/feed_bytag.yaml
+++ b/api_src/components/schemas/feed_bytag.yaml
@@ -59,6 +59,6 @@ properties:
   funding:
     $ref: '../properties/funding.yaml'
   podcastGuid:
-    $ref: '../properties/podcastGuid.yaml'
+    $ref: '../properties/podcastguid.yaml'
   valueCreatedOn:
     $ref: '../properties/valueCreatedOn.yaml'
