--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -2395,7 +2395,7 @@ components:
         The internal PodcastIndex.org Feed ID.
       type: integer
       example: 75075
-    podcastGuid:
+    podcastguid:
       description: |
         The GUID from the `podcast:guid` tag in the feed. This value is a unique, global identifier for the podcast.
 
@@ -2602,7 +2602,7 @@ components:
         id:
           $ref: '#/components/schemas/id_feed'
         podcastGuid:
-          $ref: '#/components/schemas/podcastGuid'
+          $ref: '#/components/schemas/podcastguid'
         title:
           $ref: '#/components/schemas/title_feed'
         url:
@@ -3073,7 +3073,7 @@ components:
         id:
           $ref: '#/components/schemas/id_feed'
         podcastGuid:
-          $ref: '#/components/schemas/podcastGuid'
+          $ref: '#/components/schemas/podcastguid'
         title:
           $ref: '#/components/schemas/title_feed'
         url:
@@ -3159,7 +3159,7 @@ components:
         id:
           $ref: '#/components/schemas/id_feed'
         podcastGuid:
-          $ref: '#/components/schemas/podcastGuid'
+          $ref: '#/components/schemas/podcastguid'
         title:
           $ref: '#/components/schemas/title_feed'
         url:
@@ -3309,7 +3309,7 @@ components:
         funding:
           $ref: '#/components/schemas/funding'
         podcastGuid:
-          $ref: '#/components/schemas/podcastGuid'
+          $ref: '#/components/schemas/podcastguid'
         valueCreatedOn:
           $ref: '#/components/schemas/valueCreatedOn'
     feeds_bytag:
@@ -4384,22 +4384,13 @@ components:
       properties:
         guids:
           $ref: '#/components/schemas/guids'
-    podcastGUID:
-      description: |
-        The GUID from the `podcast:guid` tag in the feed. This value is a unique, global identifier for the podcast.
-
-
-        See the namespace spec for
-        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid) for details.
-      type: string
-      example: 9b024349-ccf0-5f69-a609-6b82873eab3c
     value_byepisodeguid_batch:
       description: |
         Information for supporting the podcast via one of the "Value for Value" methods.
       type: object
       properties:
         podcastGUID:
-          $ref: '#/components/schemas/podcastGUID'
+          $ref: '#/components/schemas/podcastguid'
         guid:
           $ref: '#/components/schemas/guid'
         title:
